...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/row_height_triple_entry">

    <TextView
        android:id="@+id/transfer_destination_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/grid_margin_left"
        android:layout_marginTop="@dimen/image_offset"
        android:fontFamily="@font/hw_mobile_ui_sdk_icons"
        android:gravity="center"
...
        android:textSize="@dimen/font_default_icon_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/transfer_destination_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/grid_margin_left"
        android:layout_marginTop="@dimen/grid_margin_top"
        tools:text="@string/not_available"
        android:textAppearance="@style/TextAppearance.Hyperwallet.Subtitle1"
        app:layout_constraintLeft_toRightOf="@+id/transfer_destination_icon"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/transfer_destination_description_1"
        android:layout_width="@dimen/description_max_layout_width"
        android:layout_height="wrap_content"
        tools:text="@string/not_available"
        android:textAppearance="@style/TextAppearance.Hyperwallet.Body2"
        app:layout_constraintLeft_toLeftOf="@+id/transfer_destination_title"
        app:layout_constraintTop_toBottomOf="@+id/transfer_destination_title"/>

    <TextView
        android:id="@+id/transfer_destination_description_2"
        android:layout_width="@dimen/description_max_layout_width"
        android:layout_height="wrap_content"
        tools:text="@string/not_available"
        android:textAppearance="@style/TextAppearance.Hyperwallet.Body2"
        app:layout_constraintLeft_toLeftOf="@+id/transfer_destination_title"
        app:layout_constraintTop_toBottomOf="@+id/transfer_destination_description_1"/>
...
